unpackaged/main/default/objects/Volunteer__c/Volunteer__c.object-meta.xml
<CustomObject>
    <description>Object to store Volunteer information for Rise Together Charity Organization.</description>
    <label>Volunteer</label>
    <nameField>
        <displayFormat>Vol-{yyyy}-{0000}</displayFormat>
        <label>Volunteer Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volunteers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>