unpackaged/main/default/objects/Volunteer__c/fields/Aadhar_Number__c.field-meta.xml
<CustomField>
    <fullName>Aadhar_Number__c</fullName>
    <description>Captures Aadhar Number of user</description>
    <inlineHelpText>Enter your Aadhar Number without Spaces or Special Characters</inlineHelpText>
    <label>Aadhar Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>