unpackaged/main/default/objects/Volunteer__c/fields/Availability_Days__c.field-meta.xml
<CustomField>
    <fullName>Availability_Days__c</fullName>
    <description>Captures on which days volunteers are available</description>
    <inlineHelpText>Select the days of the week you are available to volunteer. Please choose all applicable days</inlineHelpText>
    <label>Availability Days</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monday</fullName>
            </value>
            <value>
                <fullName>Tuesday</fullName>
            </value>
            <value>
                <fullName>Wednesday</fullName>
            </value>
            <value>
                <fullName>Thursday</fullName>
            </value>
            <value>
                <fullName>Friday</fullName>
            </value>
            <value>
                <fullName>Saturday</fullName>
            </value>
            <value>
                <fullName>Sunday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>