unpackaged/main/default/objects/Volunteer__c/fields/Birth_Date__c.field-meta.xml
<CustomField>
    <fullName>Birth_Date__c</fullName>
    <description>Captures Users Date of Birth</description>
    <inlineHelpText>Please Enter your birth date</inlineHelpText>
    <label>Birth Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>