unpackaged/main/default/objects/Volunteer__c/fields/Data_Privacy_and_Usage_Consent__c.field-meta.xml
<CustomField>
    <fullName>Data_Privacy_and_Usage_Consent__c</fullName>
    <defaultValue>true</defaultValue>
    <description>To indicate their agreement to the data privacy and usage terms set forth by the organization.</description>
    <label>Data Privacy and Usage Consent</label>
    <type>Checkbox</type>
</CustomField>