unpackaged/main/default/objects/Volunteer__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>To capture User Email Address</description>
    <inlineHelpText>Please Enter your Valid Email address</inlineHelpText>
    <label>Email</label>
    <required>true</required>
    <type>Email</type>
    <unique>true</unique>
</CustomField>