unpackaged/main/default/objects/Volunteer__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>To Capture User First name</description>
    <label>First Name</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>