unpackaged/main/default/objects/Volunteer__c/fields/Guardian_Email__c.field-meta.xml
<CustomField>
    <fullName>Guardian_Email__c</fullName>
    <label>Guardian Email</label>
    <type>Email</type>
</CustomField>