unpackaged/main/default/objects/Volunteer__c/fields/Guardian_Name__c.field-meta.xml
<CustomField>
    <fullName>Guardian_Name__c</fullName>
    <label>Guardian Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>