unpackaged/main/default/objects/Volunteer__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>To capture User Last Name</description>
    <label>Last Name</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>