unpackaged/main/default/objects/Volunteer__c/fields/Parent_Guardian__c.field-meta.xml
<CustomField>
    <fullName>Parent_Guardian__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent/Guardian</label>
    <referenceTo>Volunteer__c</referenceTo>
    <relationshipLabel>Volunteers</relationshipLabel>
    <relationshipName>Volunteers</relationshipName>
    <type>Lookup</type>
</CustomField>