unpackaged/main/default/objects/Volunteer__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>To capture User&#39;s Contact Number</description>
    <inlineHelpText>Please Enter Your Mobile Number</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>