unpackaged/main/default/objects/Volunteer__c/fields/Referred_By__c.field-meta.xml
<CustomField>
    <fullName>Referred_By__c</fullName>
    <description>Name or source of the person or organization that referred this user</description>
    <inlineHelpText>Enter the name or source of the person or organization that referred</inlineHelpText>
    <label>Referred By</label>
    <length>80</length>
    <type>Text</type>
</CustomField>