unpackaged/main/default/objects/Volunteer__c/fields/Skills__c.field-meta.xml
<CustomField>
    <fullName>Skills__c</fullName>
    <description>skills volunteers possess that can contribute to our volunteer efforts</description>
    <inlineHelpText>Please select all applicable skills from the list. 
This information helps us match you with suitable volunteer opportunities and roles within our organization</inlineHelpText>
    <label>Skills</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Volunteer_Skills</valueSetName>
    </valueSet>
</CustomField>