unpackaged/main/default/objects/Volunteer__c/fields/Volunteer_Approver_Comments__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Approver_Comments__c</fullName>
    <label>Volunteer Approver Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>