unpackaged/main/default/objects/Volunteer__c/fields/Volunteer_Status__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Status__c</fullName>
    <label>Volunteer Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Status</valueSetName>
    </valueSet>
</CustomField>