unpackaged/main/default/objects/Volunteer__c/validationRules/Aadhar_Number_12_digits.validationRule-meta.xml
<ValidationRule>
    <fullName>Aadhar_Number_12_digits</fullName>
    <active>false</active>
    <description>To ensure Aadhar number entered by users contain exactly 12 digits without spaces or special characters</description>
    <errorConditionFormula>NOT(REGEX( Aadhar_Number__c, &#39;^[0-9]{12}$&#39;))</errorConditionFormula>
    <errorDisplayField>Aadhar_Number__c</errorDisplayField>
    <errorMessage>Aadhar Number must contain 12 digits without spaces or specil Characters</errorMessage>
</ValidationRule>