unpackaged/main/default/objects/Volunteer__c/validationRules/AGE_Below_13_restriction.validationRule-meta.xml
<ValidationRule>
    <fullName>AGE_Below_13_restriction</fullName>
    <active>true</active>
    <errorConditionFormula>Age__c &lt;= 13 &amp;&amp; ISBLANK(Guardian_Name__c)</errorConditionFormula>
    <errorDisplayField>Guardian_Name__c</errorDisplayField>
    <errorMessage>The Guardian Name Should not be Empty for the Volunteer below !3</errorMessage>
</ValidationRule>