unpackaged/main/default/objects/Volunteer__c/validationRules/DOB_not_future_date.validationRule-meta.xml
<ValidationRule>
    <fullName>DOB_not_future_date</fullName>
    <active>true</active>
    <description>To ensure the birth date of users does not fall on future dates</description>
    <errorConditionFormula>Birth_Date__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Birth_Date__c</errorDisplayField>
    <errorMessage>Birth date cannot be a future date.</errorMessage>
</ValidationRule>