unpackaged/main/default/objects/Volunteer__c/validationRules/Guardian_Email_Id_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Guardian_Email_Id_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Age__c &lt;= 13 &amp;&amp;  ISBLANK(Guardian_Email__c)</errorConditionFormula>
    <errorDisplayField>Guardian_Email__c</errorDisplayField>
    <errorMessage>For age Below 13 Guardian Email should be provided</errorMessage>
</ValidationRule>