unpackaged/main/default/objects/Volunteer__c/validationRules/Phone_only_Digits_allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_only_Digits_allowed</fullName>
    <active>false</active>
    <errorConditionFormula>NOT (REGEX( Phone__c, &#39;^[0-9]{10}$&#39;))</errorConditionFormula>
    <errorDisplayField>Phone__c</errorDisplayField>
    <errorMessage>Please enter  a valid 10 digits phone number</errorMessage>
</ValidationRule>