unpackaged/main/default/objects/Volunteer__c/validationRules/Rule_for_FirstName.validationRule-meta.xml
<ValidationRule>
    <fullName>Rule_for_FirstName</fullName>
    <active>true</active>
    <description>Field must not contain special characters or numbers</description>
    <errorConditionFormula>NOT(REGEX( First_Name__c , &quot;^[a-zA-Z ]*$&quot;))</errorConditionFormula>
    <errorDisplayField>First_Name__c</errorDisplayField>
    <errorMessage>Should  not contain special characters or numbers</errorMessage>
</ValidationRule>