unpackaged/main/default/objects/Volunteer__c/validationRules/Rule_for_Last_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Rule_for_Last_Name</fullName>
    <active>true</active>
    <description>Field must not contain special characters or numbers</description>
    <errorConditionFormula>NOT(REGEX( Last_Name__c , &quot;^[a-zA-Z ]*$&quot;))</errorConditionFormula>
    <errorDisplayField>Last_Name__c</errorDisplayField>
    <errorMessage>Should not contain special characters or numbers</errorMessage>
</ValidationRule>