unpackaged/main/default/objects/Volunteer__c/validationRules/Username_Email_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Username_Email_Format</fullName>
    <active>false</active>
    <description>To ensure Username in the Email Format.</description>
    <errorConditionFormula>NOT( REGEX( Username__c , &#39;^[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\\.[A-Za-z]{2,4}$&#39;))</errorConditionFormula>
    <errorDisplayField>Username__c</errorDisplayField>
    <errorMessage>Username must be in the format of an email address (e.g., user@example.com).</errorMessage>
</ValidationRule>