unpackaged/main/default/objects/Volunteer__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>